@@ -438,7 +438,8 @@ EVENT_CONNECT = 53
 EVENT_DISCONNECT = 54
 EVENT_GUILDBUTTON = 55
 EVENT_SELECTABILITY = 56
-EVENT_COUNT = 57
+EVENT_LOG = 57
+EVENT_COUNT = 58
 """
 	\end
 """
