@@ -97,6 +97,7 @@ enum ePythonEvent
 	EVENT_DISCONNECT,
 	EVENT_GUILDBUTTON,
 	EVENT_SELECTABILITY,
+	EVENT_LOG,
 	EVENT_COUNT,
 };
 
